gmt (4.5.7-1) unstable; urgency=low

  * New upstream version with a new compact distribution.
  * Policy bumped to 3.9.3, no changes required.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 07 Mar 2012 09:56:12 +0100

gmt (4.5.6-1) unstable; urgency=low

  * New upstream release.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 28 Mar 2011 12:50:08 +0200

gmt (4.5.5-1) unstable; urgency=low

  * New upstream release.
  * Moved from svn to git repository and changed Vcs-* as due.
  * Policy bumped to 3.9.1.
  * Compatibility level set to 8.
  * Now using source format 3.0. Note that quilt is still required
    as explicit build-dep due to the peculiar unpacking method.
  * Fixed creat-orig-tar to create the use the correct tarball name.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 07 Mar 2011 15:44:04 +0100

gmt (4.5.2-1) unstable; urgency=low

  * New upstream release.
  * Policy bumped to 3.8.4. No changes.
  * Added a NEWS file about new coastline data format.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 15 Feb 2010 18:09:07 +0100

gmt (4.5.1-1) unstable; urgency=low

  * New upstream release.
  * Policy bumped to 3.8.3. No changes.
  * [lintian] Changed my dotted name in Uploaders to avoid annoying warnings.
  * [lintian] Wrapped changelog line.
  * Fixed creat-orig-tar rule in debian/rules for correct directory naming.
  * Added ${misc:Depends} item in debian/control. 
  * GMT uses GPL-2 strictly.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 21 Sep 2009 22:47:01 +0200

gmt (4.4.0-1) unstable; urgency=low

  * New upstream release. Note that /etc/gmt/gmt_formats.conf is no more 
    installed and all provided files are removed.
    (closes: #490268, #499648)
  * Moved to debhelper level 7.
  * Added a dh_prep call at building start.
  * Revised debian/rules to work with new upstream locations.
  * Updated README.Debian.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 26 Mar 2009 11:19:15 +0100