@@ -2,6 +2,11 @@ gmt (4.5.7-1) unstable; urgency=low
 
   * New upstream version with a new compact distribution.
   * Policy bumped to 3.9.3, no changes required.
+  * Now use in embedded mode quilt and all tar/unpack/patch target have been dropped.
+  * Get-orig-source and all other special target dropped due to semplification
+    of the distribution.
+  * Added a build-dep on autotools-dev and provided usual snippets to override
+    config.{sub,guess} files before configuring.
 
  -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 07 Mar 2012 09:56:12 +0100
 
